[tool.poetry]
name = "echogains"
version = "1.0.1"
description = "Echo Generative Augmentation of Images for Nicer Segmentation"
authors = ["Gilles Van De Vyver <gillesvandevyver@hotmail.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=2.0"
tqdm = ">=4.0"
huggingface_hub = ">=0.8.0"
scikit-image = ">=0.20"
opencv-python = ">=4.9"
torch = ">=1.10"
blobfile = ">=0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
